--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,30 +12,30 @@
   <body>
     <header class="header">
       <div class="header-inner">
-        <div class="header-left-nav">  #検索エリア
+        <div class="header-left-nav">
           <a href="/">
             <img alt="サイトのロゴ画像" src="https://presite-potepancamp-rails-02.herokuapp.com/assets/logo.png">
           </a>
-          <form action="" accept-charset="UTF-8" method="get" >   # ※※※リンクの指定が未設定※※※
+          <form action="" accept-charset="UTF-8" method="get" >
             <div class="headr-search d-lg-inline-block d-none">
               <input type="text" name="area" id="area" value="" class="form-control" placeholder="エリア">
-              <i class="fas fa-map-marker-alt">  # ピンアイコン
+              <i class="fas fa-map-marker-alt"> 
                 ::before
               </i>
             </div>
             <div class="headr-search">
               <input type="text" name="keyword" id="keyword" value="" class="form-control" placeholder="キーワード">
-              <i class="fa-solid fa-magnifying-glass">  # 検索アイコン
+              <i class="fa-solid fa-magnifying-glass">
                 ::before
               </i>
             </div>
-            <input type="submit" name="commit" value="" class="d-none" data-disable-with="">  #d-noneで要素を非表示
+            <input type="submit" name="commit" value="" class="d-none" data-disable-with="">
           </form>
         </div>
-        <div class="header-right-nav">  #ログインエリア
+        <div class="header-right-nav">
           <div class="nav-item">
-            <a class="btn btn-primary my-2 mx-3" href="">ログイン</a>   # ※※※リンクの指定が未設定※※※
-            <a class="btn btn-secondary" href="">登録する</a>   # ※※※リンクの指定が未設定※※※
+            <a class="btn btn-primary my-2 mx-3" href="">ログイン</a>
+            <a class="btn btn-secondary" href="">登録する</a>
           </div>
         </div>
       </div>
