--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
           <form action="" accept-charset="UTF-8" method="get" >
             <div class="headr-search d-lg-inline-block d-none">
               <input type="text" name="area" id="area" value="" class="form-control" placeholder="エリア">
-              <i class="fas fa-map-marker-alt"> 
+              <i class="fas fa-map-marker-alt">
                 ::before
               </i>
             </div>
             <div class="headr-search">
               <input type="text" name="keyword" id="keyword" value="" class="form-control" placeholder="キーワード">
-              <i class="fa-solid fa-magnifying-glass">
+              <i class="fas fa-search">
                 ::before
               </i>
             </div>
