--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script src="https://kit.fontawesome.com/59f33b12cf.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -17,15 +17,15 @@
             <img alt="サイトのロゴ画像" src="https://presite-potepancamp-rails-02.herokuapp.com/assets/logo.png">
           </a>
           <form action="" accept-charset="UTF-8" method="get" >
-            <div class="headr-search d-lg-inline-block d-none">
+            <div class="headr-search d-lg-inline-block">
               <input type="text" name="area" id="area" value="" class="form-control" placeholder="エリア">
               <i class="fas fa-map-marker-alt">
                 ::before
               </i>
             </div>
-            <div class="headr-search">
+            <div class="headr-search d-lg-inline-block">
               <input type="text" name="keyword" id="keyword" value="" class="form-control" placeholder="キーワード">
-              <i class="fas fa-search">
+              <i class="fa-solid fa-location-dot">
                 ::before
               </i>
             </div>
