--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,11 @@
           <form action="" accept-charset="UTF-8" method="get" >
             <div class="headr-search d-lg-inline-block">
               <input type="text" name="area" id="area" value="" class="form-control" placeholder="エリア">
-              <i class="fas fa-map-marker-alt">
-                ::before
-              </i>
+              <i class="fas fa-map-marker-alt"></i>
             </div>
             <div class="headr-search d-lg-inline-block">
               <input type="text" name="keyword" id="keyword" value="" class="form-control" placeholder="キーワード">
-              <i class="fa-solid fa-location-dot">
-                ::before
-              </i>
+              <i class="fas fa-search"></i>
             </div>
             <input type="submit" name="commit" value="" class="d-none" data-disable-with="">
           </form>
@@ -40,9 +36,7 @@
         </div>
       </div>
     </header>
-    <div class="clearfix">
-      ::after
-    </div>
+    <div class="clearfix"></div>
     <script>
       $(function() {
         $('.nav-trigger').click(function() {
