--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,16 @@
 <div class="container device">
   <div class="device_frame">
-    <p class="my-4">ログイン</p>
+    <p class="my-4">ログイン</P>
     <div class="device_inner">
-      <form action="" class="new_user" id="new_user" accept-charset="UTF-8" method="post">
-        <input type="hidden" name="authenticity_token" value="LqiI6a4jo4BO4UpZK39/ksUw/eaw3zaavOCLXc2ecaUcbfwAfrcajBqi0SoyCShQ+DqEPk06AmBQCoyrjfJfWA==">
+      <form class ="new_user" id="new_user" action="" method="post accept-charset="UTF-8">
         <div class="field form-row">
           <div class="col-2 required-b pt-2">
-            ::before
           </div>
           <input autocomplete="email" class="form-control col-10 px-2" placeholder="メールアドレス" type="email" value="" name="user[email]" id="user_email">
         </div>
         <div class="field form-row">
-          <div class="col-2 required-b pt-2"></div>
+          <div class="col-2 required-b pt-2">
+          </div>
           <input autocomplete="current-password" class="form-control col-10 px-2" placeholder="パスワード" type="password" name="user[password]" id="user_password">
         </div>
         <div class="actions">
