ログイン画面作成完了

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,20 +4,20 @@
     <div class="device_inner">
       <form class ="new_user" id="new_user" action="" method="post accept-charset="UTF-8">
         <div class="field form-row">
-          <div class="col-2 required-b pt-2">
+          <div class="col-2 required-b required-b_name pt-2">
           </div>
-          <input autocomplete="email" class="form-control col-10 px-2" placeholder="メールアドレス" type="email" value="" name="user[email]" id="user_email">
+          <input autocomplete="email" class="form-control form-control_email col-10 px-2" placeholder="メールアドレス" type="email" value="" name="user[email]" id="user_email">
         </div>
         <div class="field form-row">
-          <div class="col-2 required-b pt-2">
+          <div class="col-2 required-b required-b_passwoed pt-2">
           </div>
-          <input autocomplete="current-password" class="form-control col-10 px-2" placeholder="パスワード" type="password" name="user[password]" id="user_password">
+          <input autocomplete="current-password" class="form-control form-control_password col-10 px-2" placeholder="パスワード" type="password" name="user[password]" id="user_password">
         </div>
         <div class="actions">
-          <input type="submit" name="commit" value="ログイン" class="form-control btn-primary my-4 " data-disable-with="ログイン">
+          <input type="submit" name="commit" value="ログイン" class="form-control btn-primary form_login_execution my-4 " data-disable-with="ログイン">
         </div>
       </form>
-      <a href="/users/sign_up">新しいアカウントを作成</a>
+      <a class ="account_creating_link" href="/users/sign_up">新しいアカウントを作成</a>
       <br>
     </div>
   </div>
