--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -202,7 +202,7 @@ element.style {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #fff;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -263,12 +263,33 @@ footer {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #495057;
+  color: #fff;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form_login_execution{
+  position: relative;
+  top: -60px;
+  text-align: center;
+}
+
+.form-control_email{
+  position: relative;
+  top:-30px;
+}
+
+.form-control_password{
+  position: relative;
+  top: -55px;
+}
+
+.account_creating_link{
+  position: relative;
+  top: 125px;
 }
 
 .header-left-nav form {
@@ -367,7 +388,7 @@ p {
   background-color: white;
   border-radius: 4px;
   box-shadow: rgb(21 27 38 / 15%) 0px 1px 3px 0px;
-  height: 600px;
+  height: 300px;
 }
 
 .required-b::before {
@@ -380,7 +401,12 @@ p {
   margin: 0 5px;
   position: relative;
   left: -210px;
-  top: 30px;
+  top: -25px;
+}
+
+.required-b_name{
+  position: relative;
+  top:23px;
 }
 
 .col-10 {
@@ -395,6 +421,7 @@ p {
   padding-right: 15px;
   padding-left: 15px;
 }
+
 
 input[type="password" i] {
   -webkit-text-security: disc !important;
@@ -437,6 +464,7 @@ input {
 [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
   cursor: pointer;
 }
+
 
 .mt-4, .my-4 {
   margin-top: 1.5rem!important;
