ログイン画面完成

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,7 @@
           <input type="submit" name="commit" value="ログイン" class="form-control btn-primary form_login_execution my-4 " data-disable-with="ログイン">
         </div>
       </form>
-      <a class ="account_creating_link" href="/users/sign_up">新しいアカウントを作成</a>
+      <a class ="account_creating_link" href="/users/create">新しいアカウントを作成</a>
       <br>
     </div>
   </div>
